# quatDS-lib

./: LICENSE  README.md  demo_quatDS.m  linear_quat_ds.m
matlab/ds-fct/: linear_ds.m
matlab/utils/: plot_Quaternion_trajectories.m  visualizeEstimatedQuaternions.m
matlab/utils/quat-fcts/: quat_conj.m  quat_multiply.m  quat_prod.m
quatDS-cpp/: .gitignore  CMakeLists.txt
quatDS-cpp/include/: Quaternions.h
quatDS-cpp/src/: test_quatDS.cpp
quatDS-cpp/src/quatDS/: Quaternions.cpp
quatDS-matlab/: demo_quatDS.m  my_demo_quatDS.m
quatDS-matlab/utils/quat-fcts/: quat_delta.m
quatDS-matlab/utils/transformations/: my_quaternion.m
quatDS-ros/: CMakeLists.txt  package.xml
quatDS-ros/launch/: test_quatDS.launch  test_quatDSwRobot.launch
quatDS-ros/src/: test_quatDS.cpp  test_quatDS_node.cpp  test_quatDSwRobot_node.cpp
utils/: frame-drawing.m  get_Hdata.m  gmr_regressor.m  plot_6DOF_reference_trajectories.m  quat_dist.m
utils/quat-fcts/: quat_error.m  quat_exponential.m  quat_logarithm.m  quat_sub.m  rot_logarithm.m
utils/transformations/: eul2rotm.m
